# sakugabooru-episode-mad

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml
sakugabooru_episode_mad/: __main__.py  download.py  process.py
