[metadata]
name = sakugabooru_episode_mad
version = 0.1.0
description = downloads all sakugabooru posts for a tag and combines them based on their source episode using ffmpeg
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/seanbreckenridge/sakugabooru_episode_mad"
author = Sean Breckenridge
author_email = "seanbrecke@gmail.com"
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords = sakuga anime ffmpeg

[options]
packages = find:
install_requires =
    backoff
    beautifulsoup4>=4.9.3
    click>=8.0
    python-requires>=3.9
    requests>=2.25.1
python_requires = >=3.9
include_package_data = True

[options.packages.find]
include =
    sakugabooru_episode_mad

[options.entry_points]
console_scripts =
    sakugabooru_episode_mad = sakugabooru_episode_mad.__main__:main

[options.extras_require]
testing =
    flake8
    mypy

[options.package_data]
sakugabooru_episode_mad = py.typed

[flake8]
ignore = E501,E402,W503,E266,E203

[mypy]
pretty = True
show_error_context = True
show_error_codes = True
check_untyped_defs = True
namespace_packages = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True

[tool:pytest]
addopts =
    --verbose
    tests
